fixing product misaligned view

--- a/src/Components/SInglePageSection/ProductDescription/ProductDescription.css
+++ b/src/Components/SInglePageSection/ProductDescription/ProductDescription.css
@@ -2,12 +2,48 @@
     position: relative;
     padding: 2rem 5rem;
     display: flex;
-    gap: 1.5rem;
+    justify-content: space-between;
+    gap: 2.5rem;
 
 
     .image-container{
+        width: 500vw;
+        max-width: 553px;
+        max-height: 400px;
+        aspect-ratio: 1 / 1;
         flex: 1;
         position: relative;
+        display: flex;
+        gap: 0.8rem;
+        /* height: 500px; */
+
+        div.small{
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            img{
+                height: 100px;
+                width: 100px;
+                object-fit: cover;
+                object-position: center;
+                border-radius: 10px;
+            }
+        }
+
+        div.big{
+            position: relative;
+            height: 100%;
+            width: 70%;
+
+            img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                object-position: center;
+                border-radius: 10px;
+            }
+        }
     }
 
     .description-container{
@@ -55,6 +91,36 @@
             position: relative;
             width: 70%; /*change to 100% on mobile*/
         }
+
+        div.size-selector{
+            position: relative;
+            padding: 0rem 0rem 1rem 0rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+
+            p{
+                color: #9f9f9f;
+                font-size: 16px;
+            }
+
+            input{
+                display: none;
+            }
+
+            label{
+                padding: 0.6rem;
+                border-radius: 8px;
+                font-size: 16px;
+                color: #000;
+                background: var(--primary-color400);
+                margin-right: 1rem;
+            }
+
+            input:checked + label{
+                background: var(--primary-color500);
+            }
+        }
     }
 }
 
@@ -65,14 +131,78 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        gap: 0.5rem;
 
         .description-container{
             width: 100%;
-            padding: 2rem;
+            padding: 1rem 3%;
 
             p#product-writeup{
                 position: relative;
                 width: 100%;
+            }
+
+            p#product-rating{
+                display: flex;
+                flex-direction: column;
+                position: relative;
+                gap: 0.6rem;
+                color: #9f9f9f;
+                padding-top: 1rem;
+                cursor: pointer;
+    
+                span{
+                    padding: 0rem 1rem 0rem 0rem;
+                    border-right: 2px solid 9f9f9f;
+                    display: flex;
+                    gap: 0.2rem;
+    
+                    img{
+                        height: 20px;
+                        width: 20px;
+                    }
+                }
+            }
+        }
+
+        .image-container{
+            width: 100%;
+            max-width: 100%;
+            max-height: fit-content;
+            aspect-ratio: auto;
+            flex: 1;
+            position: relative;
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 0.8rem;
+            /* height: 500px; */
+    
+            div.small{
+                display: flex;
+                flex-direction: row;
+                gap: 1rem;
+    
+                img{
+                    height: 100px;
+                    width: 100px;
+                    object-fit: cover;
+                    object-position: center;
+                    border-radius: 10px;
+                }
+            }
+    
+            div.big{
+                position: relative;
+                height: 100%;
+                width: 100%;
+    
+                img{
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                    border-radius: 10px;
+                }
             }
         }
     }
