--- a/src/Components/SInglePageSection/QuickLink/QuickLinks.css
+++ b/src/Components/SInglePageSection/QuickLink/QuickLinks.css
@@ -12,3 +12,20 @@
         outline: none;
     }
 }
+
+@media only screen and (max-width: 700px){
+    #single-page-quick-links{
+        padding: 1.5rem 3%;
+        display: flex;
+        gap: 1.5rem;
+        background: var(--primary-color300);
+        width: 100%;
+    
+        a{
+            text-decoration: none;
+            color: #9f9f9f;
+            font-size: 16px;
+            outline: none;
+        }
+    }
+}
